# mcp-jarvis1net

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: rag_config.json
deploy/: Caddyfile  grant_db_permissions.sql  jarvis1net-mcp.service  provision_postgres_and_key.sh
scripts/: ingest_docs.py  sources_internal.yaml  sources_microsoft.yaml
src/: __init__.py  app.py  deps.py  filesystem.py  graph.py  graph_ops.py  paths.py  rag_config.py  rag_tools.py  rag_vector_store.py  server.py  shell_tools.py  tool_manifest.py
src/rag/: __init__.py  config.py  ingest_docs.py  rag_config.json  service.py  vector_store.py
src/rag/tests/: evaluate_rag.py
src/tools/: __init__.py  config.py  manifest.py  registry.py  routes.py  tools_config.json
src/tools/common/: __init__.py  paths.py
src/tools/filesystem/: __init__.py  path_guard.py  routes.py  schemas.py
src/tools/microsoft/: __init__.py  graph.py  graph_api.py  graph_context.py  graph_ops.py  legacy_callback.py  msal_client.py  oauth_state.py  ops.py  routes.py  settings.py
src/tools/outlook/: __init__.py  routes.py
src/tools/shell/: __init__.py  routes.py
tests/rag_eval/: evaluate_rag.py  golden_queries.json
