[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-jarvis1net-py"
version = "2.0.1"
description = "MCP server: filesystem, shell diagnostics, Microsoft Graph (Python, stdio)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.scripts]
mcp-jarvis1net-py = "server:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["server", "filesystem", "graph", "graph_ops", "paths", "shell_tools", "tool_manifest"]

